--- a/jmeter/JSR223.md
+++ b/jmeter/JSR223.md
@@ -1,3 +1,8 @@
+---
+title: "Jmeter JSR223 assertion"
+description: custom assertion with JSR223
+tags: jmeter
+---
 
 ## JSR223 assertion with json
 ```groovy
